<resources>
    <string name="app_name">YouTubeApi</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="playlist">playlist</string>
    <string name="playlist_text_example">Emotional Well-being and Healing Practices for Children</string>
    <string name="videos_in_playlist">32 video series</string>
    <string name="video_series">%s video series</string>
    <string name="description_preview">In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey.</string>
    <string name="back">Back</string>
    <string name="playlist_cap">Playlist</string>
    <string name="video_text_example">HOW DISPLACEMENT INSTABILITY and UNCERTAINTY AFFECT CHILDREN</string>
    <string name="download">Download</string>
    <string name="video_text_preview">Refugee children often have suffered many losses and because of that, they are grieving these losses they\'re grieving the loss of their home, the loss of the life they knew, the places where they were used to be and that they loved to go. The loss of their friends, and certainly the loss of their family members and loved ones. So naturally they\'re going to have sadness.</string>
</resources>