<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.playlists.PlaylistActivity">


    <ImageView
        android:id="@+id/iv_playlist"
        android:layout_width="@dimen/iv_width"
        android:layout_height="@dimen/iv_height"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/iv_width"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/iv_playlist"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="@dimen/tv_m_end"
        android:background="#A6000000"
        android:text="@string/playlist"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="@dimen/tv_desc_width"
        android:layout_height="@dimen/tv_desc_height"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_toEndOf="@id/iv_playlist"
        android:text="@string/playlist_text_example"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/tv_videos_in_pl"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tv_vid_height"
        android:text="@string/videos_in_playlist"
        android:layout_toEndOf="@id/iv_playlist"
        android:layout_below="@id/tv_description"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/four_dp"
        />


</RelativeLayout>