<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.details.DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            android:fitsSystemWindows="true"
            android:background="@color/light_gray"
            app:contentScrim="@color/white"
            >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/tv_vid_height"
                android:text="@string/playlist_text_example"
                style="@style/Description.TextView"
                android:textSize="@dimen/big_text_size"
                android:maxLines="2"
                app:layout_collapseMode="parallax"
                />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/big_margin"
                android:layout_marginHorizontal="@dimen/tv_vid_height"
                android:text="@string/description_preview"
                app:layout_collapseMode="parallax"
                />

            <TextView
                android:id="@+id/videos_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                android:lineSpacingExtra="@dimen/def_margin"
                android:text="@string/video_series"
                android:background="@color/white"
                android:paddingStart="@dimen/tv_vid_height"
                android:paddingLeft="@dimen/tv_vid_height"
                android:layout_gravity="bottom"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/back"
                        android:textSize="@dimen/text_size_16"
                        android:textColor="@color/red"
                        app:drawableStartCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/playlist_cap"
                        android:textSize="20sp"
                        android:textColor="@color/red"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/white"
        >



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_playlist"/>

    </androidx.core.widget.NestedScrollView>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_baseline_play_arrow_24"
        android:backgroundTint="@color/red"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end"
        tools:ignore="ContentDescription"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>