<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.VideoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/videoToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_collapseMode="pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_16"
                app:drawableStartCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist_cap"
                android:textColor="@color/red"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/videoPreview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/video_height"
        android:layout_marginTop="@dimen/margin_12"
        android:background="@color/teal_200"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoToolbar"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_play"
        android:layout_width="@dimen/video_buttons_size"
        android:layout_height="@dimen/video_buttons_size"
        android:alpha="0.8"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="@id/videoPreview"
        app:layout_constraintEnd_toEndOf="@id/videoPreview"
        app:layout_constraintStart_toStartOf="@id/videoPreview"
        app:layout_constraintTop_toTopOf="@id/videoPreview"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_next"
        android:layout_width="@dimen/video_buttons_size"
        android:layout_height="@dimen/video_buttons_size"
        android:layout_marginEnd="@dimen/video_buttons_size"
        android:alpha="0.8"
        android:src="@drawable/ic_baseline_skip_next_24"
        app:layout_constraintBottom_toBottomOf="@id/videoPreview"
        app:layout_constraintEnd_toEndOf="@id/videoPreview"
        app:layout_constraintTop_toTopOf="@id/videoPreview"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_previous"
        android:layout_width="@dimen/video_buttons_size"
        android:layout_height="@dimen/video_buttons_size"
        android:layout_marginStart="@dimen/video_buttons_size"
        android:alpha="0.8"
        android:src="@drawable/ic_baseline_skip_previous_24"
        app:layout_constraintBottom_toBottomOf="@id/videoPreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/videoPreview"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_video_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:paddingHorizontal="@dimen/tv_vid_height"
        android:text="@string/video_text_example"
        android:textColor="@color/dark_black_text"
        android:textSize="@dimen/video_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoPreview" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_vid_height"
        android:layout_marginTop="@dimen/margin_12"
        app:cardCornerRadius="@dimen/def_margin"
        app:layout_constraintStart_toStartOf="@id/tv_video_title"
        app:layout_constraintTop_toBottomOf="@id/tv_video_title"
        app:strokeColor="@color/red"
        app:strokeWidth="@dimen/border_stroke">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tv_vid_height"
            android:layout_marginEnd="@dimen/def_margin"
            android:drawablePadding="@dimen/tv_vid_height"
            android:paddingVertical="@dimen/def_margin"
            android:text="@string/download"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_16"
            app:drawableEndCompat="@drawable/il_download_circle" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/video_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/tv_vid_height"
        android:layout_marginTop="@dimen/tv_vid_height"
        android:layout_marginBottom="@dimen/iv_height"
        android:scrollbarFadeDuration="0"
        android:scrollbars="vertical"
        android:text="@string/video_text_preview"
        android:textColor="@color/dark_black_text"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_download" />


    <ProgressBar
        android:id="@+id/progressBarVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>